syntax = "proto3";

package stock_market;

option go_package = "protoc_stock/proto;proto";

service StockPrice {
  rpc GetStockPrice (StockRequest) returns (StockResponse);
  rpc GetStockPriceServerStreaming (StockRequest) returns (stream StockResponse);
  rpc UpdateStockPriceClientStreaming (stream UpdateStockPriceRequest) returns (stream UpdateStockPriceResponse);
}

message StockRequest {
  string symbol = 1;
}

message StockResponse {
  string symbol = 1;
  double price = 2;
	int64 timestamp = 3;
}


message UpdateStockPriceRequest {
  string symbol = 1;
  double price = 2;
}

message UpdateStockPriceResponse {
  string message = 1;
}
